export const snapshot = {};

snapshot[`nu / linux / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/diff?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/cli/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let fileNewTemp = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$url)'#\\" ')\\"' '|' save --force \$\\"r#'(\$fileNewTemp)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dst | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dst)'#\\" \$\\"r#'(\$fileNewTemp)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dst)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$fileNewTemp)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_DIFF_PATH_PAIRS = [  ]

file
"
`;

snapshot[`nu / linux / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/find?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/cli/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_FIND_KEYS = [  ]

file
\`
`;

snapshot[`nu / linux / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/sync?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/cli/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  if 'FILE_SYNC_CLEAR_DIRS' in \$env {
    for dir in \$env.FILE_SYNC_CLEAR_DIRS {
      let dirParts = \$dir | split row '|'

      mut bin = ''
      for alias in (\$dirParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let dst = replaceEnv \$dirParts.1 | path expand
      opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dst)'#"
    }
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParent = \$dst | path dirname
    if (\$dstParent not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParent]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParent)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$url)'#" ')"' '|' save --force \$"r#'(\$dst)'#"
  }

  if 'FILE_SYNC_PATH_PERMS' in \$env {
    for perm in \$env.FILE_SYNC_PATH_PERMS {
      let permParts = \$perm | split row '|'

      mut bin = ''
      for alias in (\$permParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let cmd = replaceEnv \$permParts.1
      opPrintMaybeRunCmd ...(\$cmd | split row ' ')
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_SYNC_PATH_PAIRS = [  ]

file
\`
`;

snapshot[`nu / darwin / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/diff?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/cli/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let fileNewTemp = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$url)'#\\" ')\\"' '|' save --force \$\\"r#'(\$fileNewTemp)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dst | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dst)'#\\" \$\\"r#'(\$fileNewTemp)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dst)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$fileNewTemp)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_DIFF_PATH_PAIRS = [  ]

file
"
`;

snapshot[`nu / darwin / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/find?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/cli/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_FIND_KEYS = [  ]

file
\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/sync?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/cli/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  if 'FILE_SYNC_CLEAR_DIRS' in \$env {
    for dir in \$env.FILE_SYNC_CLEAR_DIRS {
      let dirParts = \$dir | split row '|'

      mut bin = ''
      for alias in (\$dirParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let dst = replaceEnv \$dirParts.1 | path expand
      opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dst)'#"
    }
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParent = \$dst | path dirname
    if (\$dstParent not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParent]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParent)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$url)'#" ')"' '|' save --force \$"r#'(\$dst)'#"
  }

  if 'FILE_SYNC_PATH_PERMS' in \$env {
    for perm in \$env.FILE_SYNC_PATH_PERMS {
      let permParts = \$perm | split row '|'

      mut bin = ''
      for alias in (\$permParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let cmd = replaceEnv \$permParts.1
      opPrintMaybeRunCmd ...(\$cmd | split row ' ')
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_SYNC_PATH_PAIRS = [  ]

file
\`
`;

snapshot[`nu / winnt / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/diff?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/cli/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let fileNewTemp = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$url)'#\\" ')\\"' '|' save --force \$\\"r#'(\$fileNewTemp)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dst | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dst)'#\\" \$\\"r#'(\$fileNewTemp)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dst)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$fileNewTemp)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_DIFF_PATH_PAIRS = [  ]

file
"
`;

snapshot[`nu / winnt / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/find?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/cli/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_FIND_KEYS = [  ]

file
\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_CLI = r#'http://x/cli/nu/file/sync?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.CLI_VER_MAJOR = 0

\$env.CLI_VER_MINOR = 111

do {
  let major = \$env.CLI_VER_MAJOR | into int
  let minor = \$env.CLI_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/cli/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  if 'FILE_SYNC_CLEAR_DIRS' in \$env {
    for dir in \$env.FILE_SYNC_CLEAR_DIRS {
      let dirParts = \$dir | split row '|'

      mut bin = ''
      for alias in (\$dirParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let dst = replaceEnv \$dirParts.1 | path expand
      opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dst)'#"
    }
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParent = \$dst | path dirname
    if (\$dstParent not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParent]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParent)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$url)'#" ')"' '|' save --force \$"r#'(\$dst)'#"
  }

  if 'FILE_SYNC_PATH_PERMS' in \$env {
    for perm in \$env.FILE_SYNC_PATH_PERMS {
      let permParts = \$perm | split row '|'

      mut bin = ''
      for alias in (\$permParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let cmd = replaceEnv \$permParts.1
      opPrintMaybeRunCmd ...(\$cmd | split row ' ')
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  try {
    mut yn = ''
    if 'YES' in \$env {
      \$yn = 'y'
    } else {
      \$yn = input r#'? use file (user) [y, [n]]: '#
    }
    if \$yn != 'n' {
      fileOp
    }
  } catch { |e|
    if not ((\$e.msg | str downcase) == 'i/o error') {
      error make \$e
    }
  }
}


\$env.FILE_SYNC_PATH_PAIRS = [  ]

file
\`
`;
